[package]
name = "chronounit"
version = "0.2.0"
edition = "2021"
authors = ["photowey"]
license = "Apache-2.0"
documentation = "https://docs.rs/chronounit"
repository = "https://github.com/photowey/chrono-unit"
homepage = "https://github.com/photowey/chrono-unit"
description = """
A date-time formatter and time-unit library for Rust time
"""
readme = "README.md"
keywords = ["chrono", "timeunit", "formatter", "datetime-pattern"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"